--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/*
 .App {
     text-align: center;
     background-color: #c4c5ba;
@@ -8,6 +13,24 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
+}
+
+.column {
+    float: left;
+    width: 33.33%;
+  }
+
+.abt {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 1px;
+    font-size: 60px;
+    margin-left: -500px;
+    margin-top: 80px;
+
+
 }
 
 canvas {
@@ -36,6 +59,7 @@ canvas {
     border-radius: 8px;
     border: 3px solid black;
     box-shadow: 8px 8px 0px grey;
+    margin-left: -500px;
 }
 
 @media (max-width: 800px) {
@@ -44,3 +68,4 @@ canvas {
         align-items: center;
     }
 }
+*/
