--- a/src/Experience/Experience.css
+++ b/src/Experience/Experience.css
@@ -1,9 +1,41 @@
+.Experience {
+    font-size: 40px;
+}
+
+
 #exp {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-top: 20px;
-    font-size: calc(10px + 2vmin);
+    margin-bottom: 20px;
+    left: -200px;
+    position: relative;
+    font-size: 40px;
+    background-color: black;
+    box-shadow: 8px 8px 0px grey;
+    border-radius: 8px;
+    border: 3px solid black;
+    
 
+}
+
+.change:hover a{
+    display: block;
+    color: blue;
+    font-size: 40px;
+}
+
+.change a
+{
+    transition: all 0.5s ease;
+    text-decoration: none;
+    color: transparent;
+}
+
+
+
+.arrow-down {
+  font-size: 20px
 }
