--- a/src/Experience/Experience.css
+++ b/src/Experience/Experience.css
@@ -1,4 +1,4 @@
-.Experience {
+/*.Experience {
     font-size: 40px;
 }
 
@@ -17,7 +17,7 @@
     box-shadow: 8px 8px 0px grey;
     border-radius: 8px;
     border: 3px solid black;
-    
+
 
 }
 
@@ -39,3 +39,9 @@
 .arrow-down {
   font-size: 20px
 }
+*/
+
+@tailwind components;
+@tailwind utilities;
+@tailwind screens;
+@tailwind base;
