--- a/src/TopBar/TopBar.css
+++ b/src/TopBar/TopBar.css
@@ -5,7 +5,7 @@ body {
 .container {
     width: 100%;
     height: 90px;
-    margin: 0 auto;
+    margin: 20px;
     background-color: rgba(255, 255, 255, 0.5);
 }
 
