--- a/src/TopBar/TopBar.css
+++ b/src/TopBar/TopBar.css
@@ -6,14 +6,13 @@ body {
     width: 100%;
     height: 90px;
     margin: 20px;
-    background-color: rgba(255, 255, 255, 0.5);
 }
 
 body.dark {
     --body-color: #18191a;
     --nav-color: #242526;
     --side-nav: #242526;
-    --text-color: #ccc;
+    --text-color: white;
     --search-bar: #242526;
 }
 
@@ -25,14 +24,15 @@ nav {
     z-index: 10000;
     opacity: 1;
     width: 100%;
-    /*
-    background-color: rgba(255, 255, 255, 0.05);
-    */
-    background: linear-gradient(
+    
+    background-color: #242526;
+    
+    /*background: linear-gradient(
         to bottom,
         rgba(255, 255, 255, 0) 70%,
         rgba(255, 255, 255, 0.1) 100%
     );
+    */
 }
 
 nav .nav-bar {
@@ -87,7 +87,7 @@ nav .nav-bar .logoo a {
     font-size: 20px;
     font-weight: 800;
     letter-spacing: 1.3px;
-    color: var(--text-color);
+    color: white;
     text-decoration: none;
 }
 
@@ -107,11 +107,12 @@ nav .nav-bar .logoo a {
     position: relative;
     font-size: 18px;
     font-weight: 400;
-    color: var(--text-color);
+    color: white;
     text-decoration: none;
     padding: 10px;
     white-space: nowrap;
 }
+
 
 .nav-item-2 {
     border: 2px solid #000;
@@ -122,7 +123,7 @@ nav .nav-bar .logoo a {
 }
 
 .nav-links li a:hover {
-    color: #000;
+    color: grey;
     border-bottom: 2px solid black;
     transition: all 0.3s ease-in-out 0s;
 }
@@ -134,7 +135,7 @@ nav .nav-bar .logoo a {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #000;
+    background-color: grey;
     visibility: hidden;
     transform: scaleX(10);
     transition: all 0.3s ease-in-out 0s;
