--- a/src/TopBar/TopBar.css
+++ b/src/TopBar/TopBar.css
@@ -91,6 +91,11 @@ nav .nav-bar .logoo a {
     text-decoration: none;
 }
 
+nav .nav-bar .logoo a:hover {
+    border-bottom: 2px solid white;
+    transition: all 0.2s ease-in-out 0s;
+}
+
 .nav-bar .nav-links {
     display: flex;
     justify-content: space-around;
@@ -108,6 +113,7 @@ nav .nav-bar .logoo a {
     font-size: 18px;
     font-weight: 400;
     color: white;
+    font-weight: 800;
     text-decoration: none;
     padding: 10px;
     white-space: nowrap;
@@ -123,9 +129,8 @@ nav .nav-bar .logoo a {
 }
 
 .nav-links li a:hover {
-    color: grey;
-    border-bottom: 2px solid black;
-    transition: all 0.3s ease-in-out 0s;
+    border-bottom: 2px solid white;
+    transition: all 0.2s ease-in-out 0s;
 }
 
 .nav-links li a::before {
@@ -135,7 +140,6 @@ nav .nav-bar .logoo a {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: grey;
     visibility: hidden;
     transform: scaleX(10);
     transition: all 0.3s ease-in-out 0s;
