--- a/src/TopBar/TopBar.css
+++ b/src/TopBar/TopBar.css
@@ -50,6 +50,7 @@ nav .nav-bar {
     align-items: center;
     justify-content: space-between;
     border-radius: 4%;
+    padding-bottom: 10px;
 }
 
 body.dark nav {
@@ -81,6 +82,7 @@ nav .nav-bar .sidebarOpen {
 nav .nav-bar .logoo {
     display: flex;
     justify-content: flex-start;
+    padding-top: 10px;
 }
 
 nav .nav-bar .logoo a {
