--- a/src/Components/TopBar/TopBar.css
+++ b/src/Components/TopBar/TopBar.css
@@ -69,7 +69,10 @@ body.dark nav {
 nav .nav-bar .menu {
     display: flex;
     justify-content: center;
-    padding-left: 600px;
+    align-items: center;
+    padding: 0;
+    margin: auto;
+    width: 20%;
 
 }
 
@@ -84,7 +87,6 @@ nav .nav-bar .logoo {
     display: flex;
     justify-content: flex-start;
     padding-top: 10px;
-    margin-right: 100px;
 }
 
 nav .nav-bar .logoo a {
@@ -105,15 +107,16 @@ nav .nav-bar .logoo a:hover {
     justify-content: space-around;
     align-items: center;
     padding-top: 10px;
+    position: absolute;
+    margin-left: 50%;
 }
 
 .nav-bar .nav-links li {
     margin: 0 15px;
-    list-style: none;
+    list-style: 1;
 }
 
 .nav-links li a {
-    position: relative;
     font-size: 18px;
     font-weight: 400;
     color: white;
@@ -139,7 +142,6 @@ nav .nav-bar .logoo a:hover {
 
 .nav-links li a::before {
     content: "";
-    position: absolute;
     width: 100%;
     height: 2px;
     bottom: 0;
