--- a/src/Components/TopBar/TopBar.css
+++ b/src/Components/TopBar/TopBar.css
@@ -1,154 +1,9 @@
-body {
-    height: 100vh;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.container {
-    width: 100%;
-    height: 90px;
-    margin: 20px;
-}
-
-body.dark {
-    --body-color: #18191a;
-    --nav-color: #242526;
-    --side-nav: #242526;
-    --text-color: white;
-    --search-bar: #242526;
-}
-
-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 10%;
-    z-index: 10000;
-    opacity: 1;
-    width: 100%;
-
-    background-color: #242526;
-
-    /*background: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0) 70%,
-        rgba(255, 255, 255, 0.1) 100%
-    );
-    */
-}
-
-nav .nav-bar {
-    z-index: 10000;
-    opacity: 1;
-    margin-left: 30px;
-    margin-right: 30px;
-    max-width: calc(100% - 60px);
-    position: static;
-    height: 100%;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0px;
-    margin-left: 0;
-    display: flex;
-    align-items: center;
-    border-radius: 4%;
-    padding-bottom: 10px;
-}
-
-body.dark nav {
-    border: 1px solid #242526;
-}
-.navHeader {
-    z-index: 10000000;
-    display: block;
-    align-items: center;
-    padding: 0 30px;
-    height: 100%;
-    width: 100%;
-    background: rgba(255, 255, 255, 0.9);
-}
-
-nav .nav-bar .menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    margin: auto;
-    width: 20%;
-}
-
-nav .nav-bar .sidebarOpen {
-    font-size: 20px;
-    padding: 5px;
-    cursor: pointer;
-    display: none;
-}
-
-nav .nav-bar .logoo {
-    display: flex;
-    justify-content: flex-start;
-    padding-top: 10px;
-}
-
-nav .nav-bar .logoo a {
-    font-size: 20px;
-    font-weight: 800;
-    letter-spacing: 1.3px;
-    color: white;
-    text-decoration: none;
-}
-
-nav .nav-bar .logoo a:hover {
-    border-bottom: 2px solid white;
-    transition: all 0.2s ease-in-out 0s;
-}
-
-.nav-bar .nav-links {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-top: 10px;
-    position: absolute;
-    margin-left: 50%;
-}
-
-.nav-bar .nav-links li {
-    margin: 0 15px;
-    list-style: 1;
-}
-
-.nav-links li a {
-    font-size: 18px;
-    font-weight: 400;
-    color: white;
-    font-weight: 800;
-    text-decoration: none;
-    padding: 10px;
-    white-space: nowrap;
-}
-
-.nav-item-2 {
-    border: 2px solid #000;
-    border-radius: 30px;
-    display: inline-block;
-    margin: 5px;
-    line-height: 0.5;
-}
-
-.nav-links li a:hover {
-    border-bottom: 2px solid white;
-    transition: all 0.2s ease-in-out 0s;
-}
-
-.nav-links li a::before {
-    content: "";
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    visibility: hidden;
-    transform: scaleX(10);
-    transition: all 0.3s ease-in-out 0s;
-}
-
-.nav-links li:hover a::before {
-    opacity: 1;
-}
+.underline-custom::after {
+    /* Change this to adjust the underline thickness */
+    background: white; /* Change this to your desired color */
+    transition: 0.3s ease-in-out;
+  }
