--- a/src/Components/TopBar/TopBar.css
+++ b/src/Components/TopBar/TopBar.css
@@ -2,8 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-.underline-custom::after {
-    /* Change this to adjust the underline thickness */
-    background: white; /* Change this to your desired color */
-    transition: 0.3s ease-in-out;
+.hamburger {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+  }
+  .hamburger div {
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+  }
+  #mobile-menu {
+    z-index: 1; /* Ensure it is above other content */
   }
