--- a/src/Components/TopBar/TopBar.css
+++ b/src/Components/TopBar/TopBar.css
@@ -1,20 +1,30 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 .hamburger {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 24px;
-    height: 24px;
-    cursor: pointer;
-  }
-  .hamburger div {
-    width: 100%;
-    height: 3px;
-    background-color: #fff;
-  }
-  #mobile-menu {
-    z-index: 1; /* Ensure it is above other content */
-  }
+  cursor: pointer;
+  width: 25px;
+  height: 19.5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.hamburger div {
+  background-color: #fff;
+  height: 3px;
+  width: 100%;
+  transition: all 0.3s ease;
+}
+
+/* When menu is open, transform lines to an X */
+.hamburger.open div:nth-child(1) {
+  transform: rotate(45deg);
+  transform-origin: 0% 0%;
+}
+
+.hamburger.open div:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.open div:nth-child(3) {
+  transform: rotate(-45deg);
+  transform-origin: 0% 100%;
+}
